# AI-for-Developers

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  start.ps1  start.sh  stop.ps1
ai/: .env.example  Dockerfile  pyproject.toml  run.py
ai/src/crews/difficulty_classifier_crew/: crew.py  schemas.py
ai/src/crews/example_sentences_crew/: crew.py  schemas.py
ai/src/lib/: tracer.py
ai/src/tools/: __init__.py  save_word_handler.py  save_word_pair_handler.py  save_word_pair_tool.py  save_word_tool.py
docs/: CONTAINERS_AND_ENDPOINTS.md  REFACTORING_PLAN.md
scripts/: setup-and-verify.ps1
services/voice-agent/: .env.example  Dockerfile  pyproject.toml
services/voice-agent/src/: agent.py
supabase/migrations/: 20260201204130_create_word_pairs.sql  20260211200000_create_chats.sql  20260211200001_create_chat_messages.sql  20260217120000_seed_initial_words.sql  20260218000000_add_user_id_to_words.sql
web/: -w  .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: app-sidebar.tsx  nav-documents.tsx  nav-main.tsx  site-header.tsx  word-card.tsx
web/src/contexts/: UserContext.tsx
web/src/hooks/: use-card-game.ts  use-chat-messages.ts  use-chats.ts  use-random-phrase.ts  use-word-pairs.ts  use-words-game.ts  use-words.ts
web/src/lib/: ai-service.ts  auth-guard.tsx  database.types.ts
web/src/pages/: card-game.tsx  chat.tsx  dashboard.tsx  login.tsx  random-phrase.tsx  signup.tsx  voice-game.tsx  word-pairs.tsx  words-game.tsx  words.tsx
(+25 files in other folders)
