[project]
name = "voice-agent"
version = "0.1.0"
description = "WordPan voice word game agent"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.2",
    "livekit-plugins-groq>=1.0",
    "livekit-plugins-cartesia>=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "supabase>=2.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "watchdog>=4.0.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
